--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,16 @@ input[type="email"] {
   background-color: #fff;
   background-image: none;
   border: 1px solid #ccc;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+}
+.form-control {
+  margin-bottom: 20px;
+}
+.error {
+  color: red;
 }
